# rust_weather

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  weather_api.rs
src/cli/: location.rs  weather.rs
