[package]
edition = "2021"
name = "rust_weather"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.14", features = ["std", "color", "derive", "suggestions", "unicode", "cargo", "env", "wrap_help"]}
reqwest = {version = "0.11.9", features = ["blocking", "json"]}
serde_json = "1.0.78"
