[package]
categories = ["api-bindings", "command-line-utilities"]
description = "Uses open weather api's database to provide weather data via a CLI"
edition = "2021"
keywords = ["weather", "cli", "open-weather", "api"]
license = "AGPL-3.0"
name = "rust_weather"
readme = "README.md"
repository = "https://github.com/t0112358/rust_weather/"
version = "1.2.0"

[dependencies]
clap = {version = "3.0.14", features = ["std", "color", "derive", "suggestions", "unicode", "cargo", "env", "wrap_help"]}
env_logger = "0.9.0"
log = "0.4.14"
reqwest = {version = "0.11.9", features = ["blocking", "json"]}
serde_json = "1.0.78"
